[FIX] hr_referral: scroll bar when overflowing
To reproduce
============
go to referral app and increase the size screen to 150% or more
the buttons bellow will disappear and there is no scroll bar to reach them

Solution
========
add scss style `overflow: auto visible` to the div

opw-3348914

closes odoo/enterprise#42350

--- a/hr_referral/static/src/scss/hr_referral.scss
+++ b/hr_referral/static/src/scss/hr_referral.scss
@@ -97,6 +97,7 @@ $font-family-sans-serif;
     position: relative;
     font-family: "Montserrat", #{$font-family-sans-serif};
     color: #FFFFFF;
+    overflow: auto visible;
 }
 
 .o_hr_referral {
